rust/test/dt/type_constructor/single/single_missing_generic.stderr
error[E0107]: missing generics for enum `Option`
 --> ../../../rust/test/dt/type_constructor/single/single_missing_generic.rs:9:18
  |
9 |     single Bad : Option;
  |                  ^^^^^^ expected 1 generic argument
  |
help: add missing generic argument
  |
9 |     single Bad : Option<T>;
  |                  ~~~~~~~~~
